@@ -36,7 +36,7 @@ templates_path = ['_templates']
 # The suffix(es) of source filenames.
 # You can specify multiple suffix as a list of string:
 # source_suffix = ['.rst', '.md']
-source_suffix = '.rst'
+source_suffix = {'.rst': 'restructuredtext', '.ryd': 'ryd2rst'}
 
 # The encoding of source files.
 # source_encoding = 'utf-8-sig'
@@ -46,7 +46,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'yaml'
-copyright = u'2017-2018, Anthon van der Neut, Ruamel bvba'
+copyright = u'2017-2019, Anthon van der Neut, Ruamel bvba'
 author = u'Anthon van der Neut'
 
 # The version info for the project you're documenting, acts as replacement for
@@ -67,20 +67,26 @@ print('ruamel.yaml version', version)
 # print('cwd:', os.getcwd())
 # current working directory is the one with `conf.py` !
 
-try:
-    from ryd.__main__ import RYDCmd
-    from ruamel.std.pathlib import Path
 
-    oldargv = sys.argv
-    for fn in Path('.').glob('*.ryd'):
-        sys.argv = ['ryd', 'convert', '--no-pdf', str(fn)]
-        rc = RYDCmd()
-        rc.parse_args()
-        print(sys.argv, '->', rc.run())
-    sys.argv = oldargv
+class ryd2rst:
+    pass
 
-except Exception as e:
-    print('ryd exception', e)
+
+if False:
+    try:
+        from ryd.__main__ import RYDCmd
+        from ruamel.std.pathlib import Path
+
+        oldargv = sys.argv
+        for fn in Path('.').glob('*.ryd'):
+            sys.argv = ['ryd', 'convert', '--no-pdf', str(fn)]
+            rc = RYDCmd()
+            rc.parse_args()
+            print(sys.argv, '->', rc.run())
+        sys.argv = oldargv
+
+    except Exception as e:
+        print('ryd exception', e)
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
